# WeZoo

./: Cargo.toml  README.md  docker-compose.yml
BackEnd/: .env  Cargo.toml  Dockerfile
BackEnd/entity/: Cargo.toml
BackEnd/entity/src/: cliniks.rs  goods.rs  goods_classes.rs  goods_group.rs  goods_orgs.rs  goods_pets.rs  marking.rs  mod.rs  orders.rs  organizations.rs  pet_breeds.rs  pet_types.rs  pets.rs  prelude.rs  producers.rs  reports.rs  stocks.rs  user.rs
BackEnd/migration/: Cargo.toml
BackEnd/migration/src/: lib.rs  m20250001_000001_create_user_table.rs  m20250001_000002_create_goods_classes_table.rs  m20250001_000003_create_pet_types_table.rs  m20250001_000004_create_organizations_table.rs  m20250001_000005_create_goods_groups_table.rs  m20250001_000006_create_cliniks_table.rs  m20250001_000007_create_pet_breeds_table.rs  m20250001_000008_create_pets_table.rs  m20250001_000009_create_producers_table.rs  m20250001_000010_create_goods_table.rs  m20250001_000011_create_orders_table.rs  m20250001_000012_create_goods_pets_table.rs  m20250001_000013_create_reports_table.rs  m20250001_000014_create_marking_table.rs  m20250001_000015_create_goods_orgs_table.rs  m20250001_000016_create_stocks_table.rs  m20250315_000140_create_user_table.rs  m20250320_220842_create_orders_table.rs  m20250320_221008_create_pets_table.rs  m20250320_221032_create_pet_types_table.rs  m20250320_221051_create_pet_breeds_table.rs  m20250320_221249_create_goods_pets_table.rs  m20250320_221305_create_goods_table.rs  m20250320_221641_create_reports_table.rs  m20250320_221701_create_marking_table.rs  m20250320_221726_create_goods_orgs_table.rs  m20250320_221746_create_producers_table.rs  m20250320_221829_create_stocks_table.rs  m20250320_222010_create_organizations_table.rs  m20250320_222034_create_cliniks_table.rs  m20250321_012244_create_goods_classes_table.rs  m20250321_012331_create_goods_groups_table.rs
BackEnd/src/: main.rs
BackEnd/src/routes/: auth_routes.rs  cli_routes.rs  goods_routes.rs  home_routers.rs  home_routes.rs  mod.rs  pets_routers.rs  user_routes.rs
BackEnd/src/routes/handlers/: auth_handlers.rs  cli_handlers.rs  goods_handlers.rs  home_handlers.rs  mod.rs  pets_heandlers.rs  user_handlers.rs
BackEnd/src/routes/middlewares/: auth_middlewares.rs
BackEnd/src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs  mod.rs
FrontEnd/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
FrontEnd/src/: App.js  App.tsx  index.css  types.ts
FrontEnd/src/components/: AccordionFilters.tsx  CatalogFilters.tsx  CatalogMenu.tsx  CategoryButtons.tsx  CategoryFilters.tsx  Footer.tsx  Header.css  Header.js  Header.tsx  ProductCard.tsx  ProductGrid.tsx  PromoSlider.tsx
FrontEnd/src/pages/: Auth.tsx  Cart.tsx  Catalog.tsx  Home.tsx  ProductDetail.tsx  Profile.tsx
FrontEnd/src/services/: api.ts
FrontEnd/src/store/: authStore.ts  productStore.ts
FrontEnd/src/utils/: validators.ts
backend/entity/src/: sea_orm_active_enums.rs
backend/src/routes/handlers/: login_handlers.rs  register_handlers.rs  (+1 more)
backend/src/service/: mod.rs  twilios.rs
backend/src/utils/: model.rs
src/: main.rs
src/routes/handlers/: home_handlers.rs
src/utils/: api_response.rs  constants.rs
