[package]
name = "WeZoo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }  # depends on your needs 
actix-web = "4.9.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
validator = { version = "0.16", features = ["derive"] }
env_logger = "0.11.6"
dotenv = "0.15.0"
lazy_static = "1.4.0"

[dev-dependencies]
actix-rt = "2.9"
tokio-test = "0.4"

[features]
default = ["sea-orm/sqlx-postgres"]
